# cpplib

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat  build.sh  demo-presets.bat  demo-presets.sh  vcpkg-configuration.json  vcpkg.json
client/: CMakeLists.txt  main.cpp
cmake/: VcpkgUtils.cmake  cpplibConfig.cmake.in
dist-shared/include/cpplib/: cpplib.h  export.h
dist-shared/lib/cmake/cpplib/: cpplibTargets-release.cmake  cpplibTargets.cmake
docs/: CMAKE_UTILITIES.md  DLL_HANDLING.md
ports/cpplib/: portfile.cmake  usage  vcpkg.json
src/: cpplib.cpp
test_consumer/: CMakeLists.txt  CMakePresets.json  VcpkgUtils.cmake  main.cpp  vcpkg.json
